# bgpfu

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.md  CHANGELOG.yaml  CHANGELOG.yml  MANIFEST.in  README.md  README.rst  appveyor.yml  codecov.yml  poem  pyproject.toml  setup.py  tox.ini
.github/workflows/: tests.yml
Ctl/: config.yml
bgpfu/: __init__.py  base.py  cli.py  client.py  inet.py  io.py  output.py
bgpfu/irr/: __init__.py  base.py  native.py
bgpfu/prefixlist/: __init__.py  base.py  set.py  simple.py
bgpfu/templates/: cisco_ios.j2
facsimile/: requirements-test.txt  requirements.txt
src/bgpfu/: base.py  cli.py  client.py  io.py  output.py  roa.py
src/bgpfu/irr/: __init__.py  base.py  native.py
src/bgpfu/prefixlist/: base.py  set.py  simple.py
src/bgpfu/templates/: cisco_iox.j2  juniper.j2
tests/: conftest.py  harness.py  test_cli.py  test_inet.py  test_irr.py  test_output.py  test_prefixlist.py  test_prefixlist_simple.py  test_prefixset.py  test_roatree.py
tests/data/rib/: test0-v4.txt  test0-v6.txt
tests/data/rpki/: test0.json
