[tool.poetry]
name = "bgpfu"
version = "0.2.0"
description = "BGP toolkit"
authors = [
    "Matt Griswold <grizz@20c.com>",
    "Ben Maddison <benm@workonline.africa>",
    "Job Snijders <job@instituut.net>",
]
license = "Apache-2.0"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]

#include = [
#    "src/bgpfu/templates/*.j2"
#]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry.scripts]
bgpfu = "bgpfu.cli:cli"

[tool.poetry.dependencies]
python = "^3.6"
Jinja2 = "^2.11.3"
click = "^7.1.2"
gevent = "^21.1.2"
munge = "^1.1.0"
py-radix = "^0.10.0"

[tool.poetry.dev-dependencies]
codecov = "^2.1.10"
coverage = "^5.3"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-filedata = "^0.4.0"
tox = "^3.20.1"
bandit = "^1.6.2"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
ctl = "^1.0.0"
twine = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
